--- a/AR_Picture.html
+++ b/AR_Picture.html
@@ -14,7 +14,7 @@
 
  <a-scene embedded arjs='sourceType: webcam;'>
 
- <a-marker-camera preset='0.PNG'></a-marker-camera>
+ <a-marker-camera preset='0.png'></a-marker-camera>
    
  <a-image src="https://upload.wikimedia.org/wikipedia/commons/b/be/Joko_Widodo_2019_official_portrait.jpg" 
           rotation="-90 0 0" 
